@@ -4,7 +4,7 @@
       "Doug Bell <preaction@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 6.008, CPAN::Meta::Converter version 2.150010",
+   "generated_by" : "Dist::Zilla version 6.010, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "perl_5"
    ],
@@ -34,7 +34,7 @@
             "Beam::Runner" : "0.014",
             "Beam::Wire" : "1.019",
             "Getopt::Long" : "2.36",
-            "Minion" : "0",
+            "Minion" : "8",
             "Module::Runtime" : "0",
             "Mojolicious" : "7",
             "perl" : "5.010"
@@ -49,7 +49,7 @@
             "File::Spec" : "0",
             "IO::Handle" : "0",
             "IPC::Open3" : "0",
-            "Minion::Backend::SQLite" : "0",
+            "Minion::Backend::SQLite" : "3.001",
             "Mock::MonkeyPatch" : "0",
             "Mojo::SQLite" : "2.002",
             "Test::Fatal" : "0",
@@ -61,27 +61,27 @@
    "provides" : {
       "Beam::Minion" : {
          "file" : "lib/Beam/Minion.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "Beam::Minion::Command::job" : {
          "file" : "lib/Beam/Minion/Command/job.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "Beam::Minion::Command::run" : {
          "file" : "lib/Beam/Minion/Command/run.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "Beam::Minion::Command::worker" : {
          "file" : "lib/Beam/Minion/Command/worker.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "Beam::Minion::Util" : {
          "file" : "lib/Beam/Minion/Util.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       },
       "Beam::Runner::Command::minion" : {
          "file" : "lib/Beam/Runner/Command/minion.pm",
-         "version" : "0.011"
+         "version" : "0.012"
       }
    },
    "release_status" : "stable",
@@ -96,7 +96,7 @@
          "web" : "https://github.com/preaction/Beam-Minion"
       }
    },
-   "version" : "0.011",
+   "version" : "0.012",
    "x_authority" : "cpan:PREACTION",
    "x_contributors" : [
       "Mohammad S Anwar <mohammad.anwar@yahoo.com>"
