@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.010.
 use strict;
 use warnings;
 
@@ -20,7 +20,7 @@ my %WriteMakefileArgs = (
     "Beam::Runner" => "0.014",
     "Beam::Wire" => "1.019",
     "Getopt::Long" => "2.36",
-    "Minion" => 0,
+    "Minion" => 8,
     "Module::Runtime" => 0,
     "Mojolicious" => 7
   },
@@ -29,7 +29,7 @@ my %WriteMakefileArgs = (
     "File::Spec" => 0,
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
-    "Minion::Backend::SQLite" => 0,
+    "Minion::Backend::SQLite" => "3.001",
     "Mock::MonkeyPatch" => 0,
     "Mojo::SQLite" => "2.002",
     "Test::Fatal" => 0,
@@ -51,8 +51,8 @@ my %FallbackPrereqs = (
   "Getopt::Long" => "2.36",
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
-  "Minion" => 0,
-  "Minion::Backend::SQLite" => 0,
+  "Minion" => 8,
+  "Minion::Backend::SQLite" => "3.001",
   "Mock::MonkeyPatch" => 0,
   "Module::Runtime" => 0,
   "Mojo::SQLite" => "2.002",
