@@ -2,6 +2,10 @@ Changelog for Beam-Minion
 
 {{ $NEXT }}
 
+    [Fixed]
+
+    - Beam::Minion now supports Minion 8
+
 0.011     2017-09-19 15:18:44-05:00 America/Chicago
 
     [Fixed]
